<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.LinearLayout">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivToolbarFilterIcon"
        style="@style/ivToolbarIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ivToolbarFilterIconContentDescription"
        android:src="@drawable/ic_filter"
        android:visibility="visible"
        tools:visibility="gone" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivToolbarCloseIcon"
        style="@style/ivToolbarIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ivToolbarCloseIconContentDescription"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvToolbarFilterYear"
        style="@style/tvToolbarFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvToolbarFilterYear"
        android:visibility="invisible"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvToolbarFilterMonth"
        style="@style/tvToolbarFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvToolbarFilterMonth"
        android:visibility="invisible"
        tools:visibility="visible" />

</merge>
