<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/primary_text_dark_nodisable"
        android:textSize="16sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:textIsSelectable="false"
            android:textSize="35sp"
            tools:ignore="RtlSymmetry,RtlHardcoded"
            tools:text="@string/label_month" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:textIsSelectable="false"
            android:textSize="35sp"
            tools:ignore="RtlSymmetry,RtlHardcoded"
            tools:text="@string/label_year" />

    </LinearLayout>

</LinearLayout>
