...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@android:color/darker_gray" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvItemTitle"
            style="@style/tvItemTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tvItemTitleHeight"
            app:layout_constraintBottom_toBottomOf="@id/ivItemBackdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
